@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.8-4
-Date: 2011-12-08
+Date: 2011-12-09
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
