@@ -10,7 +10,7 @@
      xlab="", ylab="",
      asp,
      center, span,
-     expand=1.5,
+     expand=1,
      mgp=getOption("oceMgp"), 
      mar=c(mgp[1]+1,mgp[1]+1,1,1),
      bg,
@@ -36,9 +36,13 @@
     to get good world views you should set \code{asp=1} or 
     set \code{ylim} to be symmetric about zero. Any given value of
     \code{asp} is ignored, if \code{center} is given.}
-  \item{center}{optional center of map, a vector containing latitude in
-    degrees north, then longitude in degrees east. (Must be accompanied
-    by \code{span}.)}
+
+  \item{center}{optional center of map, a vector containing longitude in
+      degrees east, followed by latitude in degrees north.  If provided, then
+      any provided value of \code{asp} is ignored, and instead the plot aspect
+      ratio is computed based on the center latitude.  If \code{center} is
+      provided, then \code{span} must be, also.}
+
   \item{span}{optional suggested span of plot, in kilometers (must be
     supplied, if \code{center} is supplied).}
   \item{expand}{numerical factor for the expansion of plot limits,
